--- a/css/style.css
+++ b/css/style.css
@@ -3724,8 +3724,8 @@ figcaption {
 
 .hero {
   z-index: 3;
-  background-image: linear-gradient(#0000000d, #0000000d),
-    url("https://cdn.prod.website-files.com/671235b3454e7d1dfb67f6f5/6712706260f5d0d187dd5f05_hero-3.avif");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25)),
+    url("../assests/671235b3454e7d1dfb67f6f5/6712706260f5d0d187dd5f05_hero-3.avif");
   background-position: 0 0, 50%;
   background-repeat: repeat, no-repeat;
   background-size: auto, cover;
